--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="ja">
     <head>
         <title>サンプルページ</title>
+        <meta
+          name="viewport"
+          content="width=device-width, initial-scale=1, interactive-widget=overlays-content, viewport-fit=cover, user-scalable=no"
+        />
         <style>
             body {
-                background-color: red;
+                background-color: blue;
             }
         </style>
     </head>
