--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
           name="viewport"
           content="width=device-width, initial-scale=1, interactive-widget=overlays-content, viewport-fit=cover, user-scalable=no"
         />
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <style>
             body {
-                background-color: blue;
+                background-color: green;
             }
         </style>
     </head>
