--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
           content="width=device-width, initial-scale=1, interactive-widget=overlays-content, viewport-fit=cover, user-scalable=no"
         />
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <style>
             body {
-                background-color: green;
+                background-color: red;
             }
         </style>
     </head>
