--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <title>サンプルページ</title>
+        <link rel="manifest" href="manifest.json" />
         <meta
           name="viewport"
           content="width=device-width, initial-scale=1, interactive-widget=overlays-content, viewport-fit=cover, user-scalable=no"
@@ -11,7 +12,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <style>
             body {
-                background-color: red;
+                background-color: green;
             }
         </style>
     </head>
