--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <style>
             body {
-                background-color: green;
+                background-color: blue;
             }
         </style>
     </head>
