--- a/index.html
+++ b/index.html
@@ -11,12 +11,24 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <style>
+            html,body {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                height: 100vh;
+                overflow: hidden;
+                overscroll-behavior-y: none;
+            }
             body {
-                background-color: blue;
+                background-color: lightpink;
+                min-height: 100vh;
             }
         </style>
     </head>
     <body>
+        <section>
+            This is sample page
 
+        </section>
     </body>
 </html>
