--- a/index.html
+++ b/index.html
@@ -19,16 +19,20 @@
                 overflow: hidden;
                 overscroll-behavior-y: none;
             }
+            
             body {
                 background-color: lightpink;
                 min-height: 100vh;
+            }
+
+            section {
+                background-color: lightcyan;
             }
         </style>
     </head>
     <body>
         <section>
             This is sample page
-
         </section>
     </body>
 </html>
